# cowork-to-chatgpt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/cowork2chatgpt/: __init__.py  cli.py  core.py  discovery.py  exporter.py  models.py  transcript.py
tests/: test_core.py
